# edu-chemistry-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
load_tests/: locustfile.py
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: auth.py  test_db.py  users.py
src/app/core/: config.py  jwt.py  security.py
src/app/db/: session.py
src/app/models/: __init__.py  base.py  user.py
src/app/schemas/: token.py  user.py
tests/: conftest.py  test_auth.py  test_db.py
